[project]
name = "annotatedtransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "datasets==3.0.1",
    "gputil==1.4.0",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "torch==2.4.1",
    "transformers==4.45.2",
]
